--- a/index.html
+++ b/index.html
@@ -51,19 +51,70 @@
             <div class="container">
                 <h1 class="hero-title">Effective Solutions
                     for Your Business</h1>
-                <button data-modal-open type="button" class="hero-btn btn" >Order Service</button>
+                <button data-modal-open type="button" class="hero-btn btn">Order Service</button>
             </div>
 
-            
+
             <!-- Modal window -->
 
             <div data-modal class="backdrop is-hidden">
                 <div class="modal">
+
                     <button data-modal-close class="modal-btn btn">
                         <svg class="modal-svg" width="8" height="8">
-                          <use href="./images/icon.svg#icon-close-modal"></use>
+                            <use href="./images/icon.svg#icon-close-modal"></use>
                         </svg>
                     </button>
+
+                    <form class="modal-form">
+
+                        <strong class="modal-text text">Leave your contacts and we will call you back</strong>
+
+                        <label class="label name-label">Name </label>
+                        <span class="modal-icon-wrapper">
+                            <input class="modal-input input" type="text" name="username">
+                            <svg class="modal-icon" width="18" height="24">
+                                <use href="./images/icon.svg#name"></use>
+                            </svg>
+                        </span>
+
+
+                        <label class="label">Phone</label>
+                        <span class="modal-icon-wrapper">
+                            <input class="modal-input input" type="tel" name="userphone">
+
+                            <svg class="modal-icon" width="18" height="24">
+                                <use href="./images/icon.svg#phone"></use>
+                            </svg>
+
+                        </span>
+
+                        <label class="label" for="email">Email</label>
+                        <span class="modal-icon-wrapper">
+                            <input class="modal-input input" type="email" name="email" id="email">
+                            <svg class="modal-icon" width="18" height="24">
+                                <use href="./images/icon.svg#mail"></use>
+                            </svg>
+                        </span>
+
+
+                        <label class="label" for="comment">Comment</label>
+                        <textarea class="area-input input" name="comment" id="comment"
+                            placeholder="Text input"></textarea>
+
+
+                        <div class="agreement-wrapper">
+                            <input id="agreement-check" class="input agreement-input visually-hidden" type="checkbox"
+                                name="agreement">
+                            <label for="agreement-check" class="agreement-label">
+                                <span class="agreement-input-wrapper">I accept the terms and conditions of the </span><a
+                                    class="agreement-link" href="">Privacy Policy</a></label>
+                        </div>
+
+                        <button class="btn agreement-btn" type="submit">Send</button>
+
+                    </form>
+
                 </div>
             </div>
         </section>
@@ -332,52 +383,61 @@
                 <ul class="footer-icons-list">
                     <li class="footer-icons-item list">
                         <a href="https://www.instagram.com" aria-label="instagram logo" target="_blank"
-                            rel="noopener norefferer" class="footer-icons-link"><svg width="24" height="24" class="footer-icons">
+                            rel="noopener norefferer" class="footer-icons-link"><svg width="24" height="24"
+                                class="footer-icons">
                                 <use href="./images/icon.svg#icon-instagram2"></use>
                             </svg></a>
                     </li>
                     <li class="footer-icons-item list">
                         <a href="https://www.twitter.com" aria-label="twitter logo" target="_blank"
-                            rel="noopener norefferer" class="footer-icons-link"><svg width="24" height="24" class="footer-icons">
+                            rel="noopener norefferer" class="footer-icons-link"><svg width="24" height="24"
+                                class="footer-icons">
                                 <use href="./images/icon.svg#icon-twitter2"></use>
                             </svg></a>
                     </li>
                     <li class="footer-icons-item list">
                         <a href="https://www.facebook.com" aria-label="facebook logo" target="_blank"
-                            rel="noopener norefferer" class="footer-icons-link"><svg width="24" height="24" class="footer-icons">
+                            rel="noopener norefferer" class="footer-icons-link"><svg width="24" height="24"
+                                class="footer-icons">
                                 <use href="./images/icon.svg#icon-facebook2"></use>
                             </svg></a>
                     </li>
                     <li class="footer-icons-item list">
                         <a href="https://wwww.linkedin.com" aria-label="linkedIn logo" target="_blank"
-                            rel="noopener norefferer" class="footer-icons-link"><svg width="24" height="24" class="footer-icons">
+                            rel="noopener norefferer" class="footer-icons-link"><svg width="24" height="24"
+                                class="footer-icons">
                                 <use href="./images/icon.svg#icon-linkedin2"></use>
                             </svg></a>
                     </li>
                 </ul>
             </div>
+
+            <!-- Subscribe -->
+
+            <!-- Subscribe footer -->
+
+            <div class="subscribe-container">
+                <form class="subscribe-form">
+                    <label class="subscribe-label" for="subscribe">Subscribe
+                    </label>
+
+                    <div class="subscribe-wrapper">
+                        <input class="subscribe-input" type="email" name="subscribe" id="subscribe"
+                            placeholder="E-mail">
+
+                        <button class="subscribe-btn btn" type="submit">Subscribe <svg class="icon-subscribe" width="24"
+                                height="20">
+                                <use href="./images/icon.svg#icon-subscribe"></use>
+                            </svg></button>
+                    </div>
+                </form>
+            </div>
+
         </div>
     </footer>
 
-     <!-- modal JS scrpit-->
+    <!-- modal JS scrpit-->
     <script src="./js/modal.js"></script>
-
-
-
-    <ul>
-        <li>
-            <p></p>
-            <a href=""></a>
-        </li>
-        <li>
-            <p></p>
-            <a href=""></a>
-        </li>
-        <li>
-            <p></p>
-            <a href=""></a>
-        </li>
-    </ul>
 
 </body>
 
