--- a/portfolio.html
+++ b/portfolio.html
@@ -226,6 +226,27 @@
                     </li>
                 </ul>
             </div>
+            <!-- Subscribe footer -->
+
+            <div class="subscribe-container">
+                <form class="subscribe-form">
+                    <label class="subscribe-label" for="subscribe">Subscribe
+                    </label>
+
+                    <div class="subscribe-wrapper">
+                        <input class="subscribe-input" type="email" name="subscribe" id="subscribe"
+                            placeholder="E-mail">
+
+                        <button class="subscribe-btn btn" type="submit">Subscribe <svg class="icon-subscribe" width="24"
+                                height="20">
+                                <use href="./images/icon.svg#icon-subscribe"></use>
+                            </svg></button>
+                    </div>
+                </form>
+            </div>
+
+
+        </div>
         </div>
     </footer>
 
