--- a/index.html
+++ b/index.html
@@ -70,18 +70,18 @@
 
                         <strong class="modal-text text">Leave your contacts and we will call you back</strong>
 
-                        <label class="label name-label">Name </label>
+                        <label for="name" class="label name-label">Name </label>
                         <span class="modal-icon-wrapper">
-                            <input class="modal-input input" type="text" name="username">
+                            <input id="name" class="modal-input input" type="text" name="username">
                             <svg class="modal-icon" width="18" height="24">
                                 <use href="./images/icon.svg#name"></use>
                             </svg>
                         </span>
 
 
-                        <label class="label">Phone</label>
+                        <label for="phone" class="label">Phone</label>
                         <span class="modal-icon-wrapper">
-                            <input class="modal-input input" type="tel" name="userphone">
+                            <input id="phone" class="modal-input input" type="tel" name="userphone">
 
                             <svg class="modal-icon" width="18" height="24">
                                 <use href="./images/icon.svg#phone"></use>
@@ -89,9 +89,9 @@
 
                         </span>
 
-                        <label class="label" for="email">Email</label>
+                        <label for="mail" class="label" for="email">Email</label>
                         <span class="modal-icon-wrapper">
-                            <input class="modal-input input" type="email" name="email" id="email">
+                            <input id="mail" class="modal-input input" type="email" name="email">
                             <svg class="modal-icon" width="18" height="24">
                                 <use href="./images/icon.svg#mail"></use>
                             </svg>
@@ -107,7 +107,7 @@
                             <input id="agreement-check" class="input agreement-input visually-hidden" type="checkbox"
                                 name="agreement">
                             <label for="agreement-check" class="agreement-label">
-                                <span class="agreement-input-wrapper">I accept the terms and conditions of the </span><a
+                                <span class="agreement-input-wrapper">I accept the terms and conditions of the&nbsp;</span><a
                                     class="agreement-link" href="">Privacy Policy</a></label>
                         </div>
 
